@@ -10,6 +10,7 @@ Month day, 2005 - 3.6.2
 + [Detlev Vendt] added FreeImage_ZLibGUnzip
 + [Herve Drolon] added new image data types FIT_RGB16, FIT_RGBA16, FIT_RGBF, FIT_RGBAF
 + [Herve Drolon] FreeImage_FlipHorizontal & FreeImage_FlipVertical now work with any bitmap type
++ [Herve Drolon] added conversions to float and double in FreeImage_ConvertToType
 * [Herve Drolon] allowed loading of corrupted JPEG with a premature end of file
 * [Herve Drolon] fixed a memory leak with loading of exif JPEG images
 * [Detlev Vendt] changed some 'pointer-to-int' casts to 'pointer-to-long' for 64bit machines
